gitops/platform-apps/matrix/well-known.yaml
# Matrix well-known delegation - Public
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-well-known
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.__ZONE_NAME__`) && PathPrefix(`/.well-known/matrix`)
      services:
        - kind: Service
          name: ess-well-known
          port: 8010
  tls: {}
---
# Matrix well-known delegation - Public
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-well-known-netbird
  namespace: matrix
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`matrix.__ZONE_NAME__`) && PathPrefix(`/.well-known/matrix`)
      services:
        - kind: Service
          name: ess-well-known
          port: 8010
---
# Element Web well-known delegation - Public
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-well-known
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chat.__ZONE_NAME__`) && PathPrefix(`/.well-known/matrix`)
      services:
        - kind: Service
          name: ess-well-known
          port: 8010
  tls: {}
---
# Element Web well-known delegation - Public
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-well-known-netbird
  namespace: matrix
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`chat.__ZONE_NAME__`) && PathPrefix(`/.well-known/matrix`)
      services:
        - kind: Service
          name: ess-well-known
          port: 8010
